<resources>
    <string name="app_name">UP Wallet</string>
    <string name="wallet_name">钱包名称</string>
    <string name="set_wallet_name">设置钱包名称</string>
    <string name="import_wallet">导入钱包</string>
    <string name="generate_wallet">创建钱包</string>
    <string name="next">下一步</string>
    <string name="good">密码长度必须大于或等于8位, 必须同时使用大小写字母、数字、特殊字符</string>
    <string name="password">请输入密码</string>
    <string name="password_weak">您的密码太弱, 必须同时使用大小写字母、数字、特殊字符</string>
    <string name="repeat_password">请再次输入密码</string>
    <string name="password_match_toast">输入密码不匹配</string>
    <string name="backup_mnemonic">备份助记词</string>
    <string name="mnemonic_not_match">助记词不匹配</string>
    <string name="mnemonic_hint">请不要在公众场所展示(防止摄像头拍照)，也不要截屏(您的操作系统可能会将图片备份到云存储)。这些操作会给您带来巨大而不可逆转的安全隐患。</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="skip">跳过</string>
    <string name="confirm_mnemonic_word">确认助记词</string>
    <string name="wallet_create_success">钱包创建成功!</string>
    <string name="got_it">确认</string>
    <string name="et_mnemonic">请输入助记词，并以空格键隔开</string>
    <string name="mnemonic_password">助记词密码</string>
    <string name="keystore_password">Keystore密码</string>
    <string name="keystore_hint">请输入keystore</string>
    <string name="private_key_hint">请输入私钥</string>
    <string name="wallet_name_hint">请输入钱包名称</string>
    <string name="wallet_name_existed">该钱包名已使用</string>
    <string name="wallet_existed">该钱包已存在</string>
    <string name="pwd_dig">0123456789qazwsxedcrfvtgbyhnujmiklopQAZWSXEDCRFVTGBYHNUJMIKLOP</string>
    <string name="unlock">解锁</string>
    <string name="scan">扫描</string>
    <string name="receive_code">转入二维码</string>
    <string name="send">转出</string>
    <string name="receive">收款</string>
    <string name="buy">买入</string>
    <string name="sell">卖出</string>
    <string name="approve">授权进行交易</string>
    <string name="approve_details">授权%s进行交易</string>
    <string name="eth_notify">以太坊交易确认通知</string>
    <string name="cancelled">取消订单</string>
    <string name="convert">转换</string>
    <string name="convert_eth">转换为 ETH</string>
    <string name="convert_weth">转换为 WETH</string>
    <string name="not_supported">不支持的交易类型</string>
    <string name="other">其他交易类型</string>
    <string name="trade">交易</string>
    <string name="copy_address">复制地址</string>
    <string name="save_address">保存地址</string>
    <string name="save">保存</string>
    <string name="add_assets">添加代币</string>
    <string name="wallet">钱包</string>
    <string name="transaction">交易</string>
    <string name="search">搜索</string>
    <string name="wallet_type">请选择钱包类型</string>
    <string name="setting">设置</string>
    <string name="etherscan">Etherscan.io</string>
    <string name="add_contact">添加联系人</string>
    <string name="contact_list">联系人列表</string>
    <string name="contact_name">联系人名称</string>
    <string name="contact_address">联系人地址</string>
    <string name="contact_note">备注, 如：薪资（可选）</string>
    <string name="contact_empty">您还没有联系人</string>
    <string name="input_valid_name">请输入联系人名称</string>
    <string name="contact_duplication">联系人地址或名称已存在</string>
    <string name="airdrop">空投</string>
    <string name="airdrop_title">LRN 空投领取</string>
    <string name="airdrop_address_tip">您的LRN空投领取地址</string>
    <string name="airdrop_amount_tip">您本日的LRN空投领取金额</string>
    <string name="airdrop_button">领取空投</string>
    <string name="airdrop_success">成功领取空投</string>
    <string name="airdrop_empty">没有可领空投金额</string>
    <string name="airdrop_failed">领取空投失败，请稍后重试</string>
    <string name="airdrop_forward">前往NEO浏览器查看详情</string>
    <string name="airdrop_no_bind">您尚未绑定LRN的空投地址，目前无法领取</string>
    <string name="airdrop_time_invalid">距您上次领取，还未到一天，请稍后领取</string>
    <string name="airdrop_neo_error">NEO节点访问失败，请稍后重试</string>
    <string name="airdrop_next_date">下次可领时间</string>
    <string name="airdrop_browser">NEO Tracker</string>
    <string name="set_share">分享APP，获得撮合费20%收益</string>
    <string name="set_manage_wallet">管理钱包</string>
    <string name="set_money_type">货币</string>
    <string name="set_language">语言</string>
    <string name="set_itouch">触控ID</string>
    <string name="third_part_login">第三方登录</string>
    <string name="third_login_error">第三方登录失败，请稍后重试</string>
    <string name="third_login_success">第三方登录成功</string>
    <string name="third_part_logout">退出登录</string>
    <string name="third_logout_error">退出登录失败，请稍后重试</string>
    <string name="third_logout_success">退出登录成功</string>
    <string name="set_contract_version">合约版本</string>
    <string name="set_lrc_proportion">LRC费用比例</string>
    <string name="set_margin_split">差价分成</string>
    <string name="set_app_version">检查新版本</string>
    <string name="cny">人民币</string>
    <string name="usd">美元</string>
    <string name="slow">慢</string>
    <string name="quick">快</string>
    <string name="export_private_key">导出私钥</string>
    <string name="export_keystore">导出keystore文件</string>
    <string name="view_address_on_etherscan">在Etherscan上查看地址</string>
    <string name="clear_records">删除钱包并清除钱包数据</string>
    <string name="switch_wallet">使用该钱包</string>
    <string name="copy_private_key">复制私钥</string>
    <string name="copy_keystore">复制Keystore</string>
    <string name="mnemonic">助记词</string>
    <string name="keystore">Keystore</string>
    <string name="private_key">私钥</string>
    <string name="qr_code">二维码</string>
    <string name="align_qr_code">将二维码图片对准扫描框即可自动扫描</string>
    <string name="bar_code">条形码</string>
    <string name="address_confirm">在发送前，请确认地址无误。</string>
    <string name="enter_the_address">请输入地址</string>
    <string name="enter_the_amount">请输入额度</string>
    <string name="input_valid_address">请输入合法地址</string>
    <string name="input_valid_amount">请输入有效的数据</string>
    <string name="available_balance">可用余额为%s</string>
    <string name="insufficient_balance">可用余额不足</string>
    <string name="transaction_fee">交易费</string>
    <string name="dialog_fee_title">设置油费</string>
    <string name="dialog_fee_recom">推荐油价</string>
    <string name="gas_limit">邮费上限</string>
    <string name="gas_price">油价</string>
    <string name="tokens">代币</string>
    <string name="match_password">请验证密码</string>
    <string name="share_title">Up Wallet 推广</string>
    <string name="share_button">分享APP</string>
    <string name="spread_address">我的推广地址是:</string>
    <string name="send_confirmation">转出确认</string>
    <string name="send_result">转出结果</string>
    <string name="transaction_success">交易确认成功</string>
    <string name="to">转到</string>
    <string name="from">转账地址</string>
    <string name="address">地址</string>
    <string name="ID">ID</string>
    <string name="gas_fee">油费</string>
    <string name="send_and_confirm">确认转出</string>
    <string name="put_password">请输入密码</string>
    <string name="valid_password">请输入8位以上密码</string>
    <string name="trade_detail">交易详情</string>
    <string name="received">收款</string>
    <string name="status">状态</string>
    <string name="id">地址</string>
    <string name="date">日期</string>
    <string name="network_error">当前网络不可用，请检查网络设置</string>
    <string name="pending">待处理</string>
    <string name="time">时间</string>
    <string name="return_back">返回</string>
    <string name="token_address">代币地址</string>
    <string name="token_symbol">代币符号</string>
    <string name="token_add">添加代币</string>
    <string name="token_add_error">添加代币失败</string>
    <string name="send_error_result">请确保有足够的油费完成转账！</string>
    <string name="you_need">您需要</string>
    <string name="facebook_app_id">295333837738573</string>
    <string name="ddex">去中心化交易所</string>
    <string name="p2p">P2P</string>
    <string name="p2p_title">场外交易</string>
    <string name="orders">订单</string>
    <string name="orders_records">订单记录</string>
    <string name="no_data_asset">您还没有数字资产</string>
    <string name="no_data_transaction">您还没有收付帐记录</string>
    <string name="h5_dex">Loopring DEX</string>
    <string name="confirm_clear_record">确定要删除当前钱包以及相关数据吗？</string>
    <string name="hint">提示</string>
    <string name="auth_finger_tip">请轻触感应器验证指纹</string>
    <string name="auth_finger_no_match">抱歉，输入的指纹并不匹配，剩余 %1d 次机会</string>
    <string name="auth_finger_failed">抱歉，输入错误次数过多，设备锁定1分钟</string>
    <string name="keystore_psw_error">密码错误</string>
    <string name="h5dex_psw_error">密码错误，请核对后重新输入</string>
    <string name="transfer_error">转账失败，请重试</string>
    <string name="loopring_order">路印订单</string>
    <string name="expiry_date">有效期</string>
    <string name="logout_hint">退出登录将会删除您保存的个人设置信息</string>
    <string name="third_part_authorization">第三方授权</string>
    <string name="third_part_hint">第三方授权登录，系统可以保存您的APP配置，\n防止删除或者更新APP后丢失。</string>
    <string name="input_mnemonic">请输入助记词</string>
    <string name="input_dpath">请输入dpath</string>
    <string name="private_key_error">私钥错误</string>
    <string name="add_wallet_error">钱包创建失败</string>
    <string name="id_error">身份验证失败</string>
    <string name="local_file_error">本地文件读取或解析失败，请重试</string>
    <string name="mnemonic_invalid">助记词不合法</string>
    <string name="authority">授权</string>
    <string name="authority_login_success">授权登录成功</string>
    <string name="authority_login_error">授权登录失败</string>
    <string name="weak">弱</string>
    <string name="middle">中</string>
    <string name="strong">强</string>
    <string name="max">最大值</string>
    <string name="convert_des">● 什么是WETH? WETH之于ETH, 正如硬币之于等额的纸币。某些场合, 贩卖机只能接受硬币, 因此需要转换。以太坊协议保证: WETH和ETH之间的转换比率为 1 : 1, 且永不改变。</string>
    <string name="convert_tip">● 我们为您保留 0.01 ETH 作为油费以保证后续可以发送交易</string>
    <string name="upgrade_title">升级提示</string>
    <string name="upgrade_tips">检测到新版本 %s, 建议升级</string>
    <string name="upgrade_confirm">立即升级</string>
    <string name="upgrade_cancel">忽略</string>
    <string name="copy_to_clipborad_success">复制至剪切板成功</string>
    <string name="save_pic_success">保存图片至相册成功</string>
    <string name="click_twice_close">再按一次退出程序</string>
    <string name="input_valid_symbol">请输入合法的代币符号</string>
    <string name="input_valid_decimal">请输入合法的decimal</string>
    <string name="authorize_failed">授权失败</string>
    <string name="share_success">分享成功!</string>
    <string name="share_failed">分享失败:%s</string>
    <string name="share_failed_no_app">分享失败:没有安装该应用</string>
    <string name="no_access">权限拒绝</string>
    <string name="no_access_no_alert">权限已拒绝，不再提醒</string>
    <string name="wallet_address_share">钱包地址分享</string>
    <string name="download_share">下载地址分享</string>
    <string name="open">进行中</string>
    <string name="filled">成交率</string>
    <string name="finished">已成交</string>
    <string name="expired">已过期</string>
    <string name="order_submitted">挂单中</string>
    <string name="order_matching">撮合中</string>
    <string name="order_cancelled">已取消</string>
    <string name="order_completed">完全成交</string>
    <string name="order_expired">已过期</string>
    <string name="order_locked">已锁定</string>
    <string name="order_unknown">未知状态</string>
    <string name="order_cut_off">已中断</string>
    <string name="unknown">其他</string>
    <string name="order_detail">订单详情</string>
    <string name="filled_amount">完成/总额</string>
    <string name="type">类型</string>
    <string name="undefined">未定义</string>
    <string name="completed">成功</string>
    <string name="failed">失败</string>
    <string name="R10001">抱歉，系统错误，请稍后重试</string>
    <string name="R32000">抱歉，用户余额不足或者下单总量已经超过余额上限</string>
    <string name="R50001">抱歉，无法获取到扫描订单信息</string>
    <string name="R50002">抱歉，扫描二维码订单必须是P2P订单</string>
    <string name="R50003">抱歉，扫描到的订单，目前无法成交，请稍后重试</string>
    <string name="R50004">抱歉，双方订单数额不匹配，请核对后重新下单</string>
    <string name="R50005">抱歉，买单和卖单地址相同，请核对后重新下单</string>
    <string name="market">市场</string>
    <string name="change">涨跌</string>
    <string name="amount">数量</string>
    <string name="price">单价</string>
    <string name="market_price">市场/价格</string>
    <string name="amount_filled">数量/成交量</string>
    <string name="status_date">状态/时间</string>
</resources>