<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/radius_bg_38"
        android:clipChildren="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal"
            android:text="@string/put_password"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/normalText"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/stroke_white_bg"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:paddingLeft="5dp"
            android:textCursorDrawable="@drawable/white_color_cursor"
            android:textSize="@dimen/normalText"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorFortyWhite"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clipChildren="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_bg_pressed"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorFortyWhite"/>

            <TextView
                android:id="@+id/confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/text_bg_pressed"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
