<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    >
    <com.tomcat360.lyqb.views.TitleView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_search"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorTitleBac"
        android:orientation="horizontal">


        <EditText
            android:layout_marginLeft="10dp"
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/radius_bg_38"
            android:drawableLeft="@mipmap/icon_search_small"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:hint="@string/search"
            android:paddingLeft="8dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:digits="@string/pwd_dig"
            android:textColor="@color/colorTitleTv"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/normal14Text" />

        <TextView
            android:id="@+id/cancel_text"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:minWidth="60dip"
            android:text="@string/cancel"
            android:textSize="@dimen/normalText" />

    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margSide"
        android:layout_marginRight="@dimen/margSide"
        android:layout_marginTop="85dp" />
</RelativeLayout>
