<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/set_wallet_name"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="vertical">

    <leaf.prod.app.views.TitleView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="345dp"
        android:layout_height="180dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/wallet_name"
            style="@style/editTextStyle"
            android:layout_centerInParent="true"
            android:focusableInTouchMode="true"
            android:hint="@string/wallet_name"
            android:imeOptions="actionNext"
            android:maxLength="16"
            android:maxLines="1"
            android:minWidth="40dp"
            android:gravity="center_horizontal"
            android:textColorHint="@color/colorWhite"
            android:textCursorDrawable="@drawable/white_color_cursor"
            android:textSize="@dimen/normalText"
            app:met_baseColor="@color/colorWhite"
            app:met_checkCharactersCountAtBeginning="false"
            app:met_floatingLabel="none"
            app:met_helperTextColor="@color/colorWhite"
            app:met_hideUnderline="true"
            app:met_primaryColor="@color/colorWhite"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_unlock"
        style="@style/SubmitBtnStyle"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/unlock"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"/>

    <LinearLayout
        style="@style/MatchWrap.Horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:id="@+id/password_hint"
            style="@style/WrapWrap"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/good"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/normal14Text"
            android:visibility="gone"/>
    </LinearLayout>
</LinearLayout>
